db_stack_demo.yaml
Description: Demo VPC, Subnet, Route Table
Resources:
  myvpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.173.0.0/24
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: MyVpc

  # public subnet for webserver
  publicSub:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myvpc
      CidrBlock: 10.173.0.0/26
      AvailabilityZone: ap-northeast-1a
      Tags:
        - Key: Name
          Value: PublicSubnet
  # create ec2 instance in the publicSub
  webServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: !Select
        - 0
        - - ami-12345678
          - ami-87654321
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          SubnetId: !Ref publicSub
      Tags:
        - Key: Name
          Value: WebServer
  # set SG for the webserver
  webServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Web Server
      VpcId: !Ref myvpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: WebServerSG
  # 按照业务逻辑划分，比如subnet1（AZ1）和subnet2（AZ2）组成叫做mobile app 子网组。Subnet3（AZ1）和Subnet4（AZ2）组成叫做 web app 子网组。
  # 那么在创建RDS的时候：RDS 数据库 提供给mobile服务的应用 使用 子网组：mobile app。RDS 数据库 提供给 web 服务的应用 使用子网组：web app。
  # AZ1
  subnet01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myvpc
      CidrBlock: 10.173.0.64/26
      AvailabilityZone: ap-northeast-1a
      Tags:
        - Key: Name
          Value: SUB-01

  # AZ2
  subnet03:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myvpc
      CidrBlock: 10.173.0.128/26
      AvailabilityZone: ap-northeast-1b
      Tags:
        - Key: Name
          Value: SUB-03
  # network acl@public subnets
  acl01:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref myvpc

  # network acl@private subnets
  acl03:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref myvpc
  # create aigw@public subnets
  igw01:
    Type: AWS::EC2::InternetGateway
    Properties: {}
  # create DB Subnet Group for later deployment of RDS
  dbsubnetgroup01:
    # => where to place DB instances?
    # Used only by RDS services for Multi-AZ deployment
    #   Application layer construct
    #   Goups subnets for DB placement
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: RDS subnet Group
      DBSubnetGroupName: DBSG-01
      SubnetIds:
        - !Ref subnet01
        - !Ref subnet03

  # create RDS DB instance
  rds01:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: "50"
      AllowMajorVersionUpgrade: "false"
      AutoMinorVersionUpgrade: "false"
      CharacterSetName: AL32UTF8
      DBInstanceClass: db.t3.medium
      Port: 1521
      StorageType: gp2
      BackupRetentionPeriod: "7"
      MasterUsername: apigwdbuser
      MasterUserPassword: apigwdbuser
      PreferredBackupWindow: 17:00-17:30
      PreferredMaintenanceWindow: sat:18:00-sat:18:30
      DBName: mobileApp
      Engine: oracle-se2
      EngineVersion: 19.0.0.0.ru-2022-04.rur-2022-04.r1
      LicenseModel: license-included
      MultiAZ: "false"
      StorageEncrypted: "true"
      DBInstanceIdentifier: mobileApp
      DBSubnetGroupName: !Ref dbsubnetgroup01
      VPCSecurityGroups:
        - !Ref dbSG
      Tags:
        - Key: workload-type
          Value: other
      EnableCloudwatchLogsExports:
        - audit

  # set the SG @RDS DB instance
  dbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: SG-01
      GroupDescription: for RDS
      VpcId: !Ref myvpc
      Tags:
        - Key: Name
          Value: DB-SG
  # set the SG rules for the RDS DB instance
  # only allow traffic from the local VPC
  dbSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref dbSG
      # CidrIp: 10.173.0.0/24 # A
      IpProtocol: tcp
      FromPort: 1521
      ToPort: 1521
      SourceSecurityGroupId: !Ref webServerSG # A, B, c,d 互斥

  rtPublic:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myvpc
      Tags:
        - Key: Name
          Value: Public Route Table
  # create route table @public subnets
  # rule: all traffic to igw
  rtPublicIgwRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rtPublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref igw01
  # create route table @private DB subnets
  # rule: no internet access, Only local vpc traffic allowed
  rtPrivate:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myvpc
      Tags:
        - Key: Name
          Value: Private Route Table
  # route.rule that with default route( only allow local traffic)
  # rtdb01: # but there is no need to create default local rule
  #   Type: AWS::EC2::Route
  #   Properties:
  #     RouteTableId: !Ref rtPrivate
  #     DestinationCidrBlock: 10.173.0.0/24

  # n/w acl rule for public subnet
  aclAllowAllOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      RuleAction: allow
      Protocol: -1
      RuleNumber: 100
      NetworkAclId: !Ref acl01
  # typical acl rule
  HttpInboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref acl01
      RuleNumber: 200
      Protocol: 6
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 80
        To: 80
  # ACL rules for private DB subnets
  privateAclInboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref acl03
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      CidrBlock: 10.173.0.0/24 # Allow VPC traffic
      PortRange:
        From: 1521
        To: 1521
  privateAclOutboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref acl03
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 10.173.0.0/24 # Allow VPC traffic

  # Associate Network ACL with DB subnets
  publicAclAssoc:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref acl01
      SubnetId: !Ref subnet01
  # Associate same ACL with both DB subnets
  privateAclAssoc1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref acl03
      SubnetId: !Ref subnet01
  privateAclAssoc2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref acl03
      SubnetId: !Ref subnet03
  # associate( route table, subnet)
  publicRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref rtPublic
      SubnetId: !Ref publicSub
  privateRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref rtPrivate
      SubnetId: !Ref subnet03
  privateRtAssoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref rtPrivate
      SubnetId: !Ref subnet01
  # associate( internet gateway, route table)
  publicRoute:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref myvpc
      InternetGatewayId: !Ref igw01
    DependsOn:
      - publicRouteAssoc
