vpc_nat_ec2.yaml
Description: VPC with Public and Private Subnets, NAT Gateway, and EC2 Instances
Resources:
  AttachIGW:
    Properties:
      InternetGatewayId: !Ref MyInternetGateway
      VpcId: !Ref MyVPC
    Type: AWS::EC2::VPCGatewayAttachment
  MyInternetGateway:
    Properties:
      Tags:
        - Key: Name
          Value: my-igw
    Type: AWS::EC2::InternetGateway
  MyVPC:
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: MyVPC
    Type: AWS::EC2::VPC
  NATGateway:
    Properties:
      AllocationId: !GetAtt NATIP.AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: my-nat-gateway
    Type: AWS::EC2::NatGateway
  NATIP:
    Properties:
      Domain: vpc
    Type: AWS::EC2::EIP
  PrivateDefaultRoute:
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
      RouteTableId: !Ref PrivateRouteTable
    Type: AWS::EC2::Route
  PrivateInstance:
    Properties:
      ImageId: ami-03852a41f1e05c8e4
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref PrivateSG
      SubnetId: !Ref PrivateSubnet
      Tags:
        - Key: Name
          Value: private-ec2
    Type: AWS::EC2::Instance
  PrivateRouteTable:
    Properties:
      Tags:
        - Key: Name
          Value: private-rt
      VpcId: !Ref MyVPC
    Type: AWS::EC2::RouteTable
  PrivateSG:
    Properties:
      GroupDescription: Private subnet SG t allow all traffic
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          FromPort: 0
          IpProtocol: "-1"
          ToPort: 65535
      Tags:
        - Key: Name
          Value: private-sg
      VpcId: !Ref MyVPC
    Type: AWS::EC2::SecurityGroup
  PrivateSubnet:
    Properties:
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: private-subnet
      VpcId: !Ref MyVPC
    Type: AWS::EC2::Subnet
  PrivateSubnetRTAssoc:
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet
    Type: AWS::EC2::SubnetRouteTableAssociation
  PublicDefaultRoute:
    Properties:
      RouteTableId: !Ref PublicRouteTable # routing all traffic to  Igw
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway
    Type: AWS::EC2::Route
  PublicInstance:
    Properties:
      ImageId: ami-03852a41f1e05c8e4
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref PublicSG
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: public-ec2
    Type: AWS::EC2::Instance
  # attach eip to the EC2 instance
  PublicInstanceEIP:
    Properties:
      Domain: vpc
    Type: AWS::EC2::EIP
  PublicInstanceEIPAssociation:
    Properties:
      AllocationId: !GetAtt PublicInstanceEIP.AllocationId
      InstanceId: !Ref PublicInstance
    Type: AWS::EC2::EIPAssociation
  # RTB for subnets
  PublicRouteTable:
    Properties:
      Tags:
        - Key: Name
          Value: public-rt
      VpcId: !Ref MyVPC
    Type: AWS::EC2::RouteTable
  PublicSG:
    Properties:
      GroupDescription: Allow SSH, HTTP from anywhere
      SecurityGroupEgress: # Outbound rules
        - CidrIp: 0.0.0.0/0
          FromPort: 0
          IpProtocol: "-1"
          ToPort: 65535
      SecurityGroupIngress: # Inbound rules
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22 # SSH port 20 for inbound traffic
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80 # HTTP port 80 for inbound traffic
      Tags:
        - Key: Name
          Value: public-sg
      VpcId: !Ref MyVPC
    Type: AWS::EC2::SecurityGroup
  PublicSubnet:
    Properties:
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: public-subnet
      VpcId: !Ref MyVPC
    Type: AWS::EC2::Subnet
  PublicSubnetRTAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  # N/W ACL Block for the Public subnet
  NetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: MyNetworkAcl
  NetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      # Egress: false  # default Inbound rule
      CidrBlock: 0.0.0.0/0
      NetworkAclId: !Ref NetworkAcl
      RuleAction: allow
      RuleNumber: 100
      Protocol: -1
  SubnetNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref NetworkAcl
      SubnetId: !Ref PublicSubnet
